--- a/inventory.ini
+++ b/inventory.ini
@@ -1,1 +1,2 @@
-[myhosts] localhost ansible_ssh_user=rashit_patel ansible_ssh_pass=3149
+[myhosts]
+localhost ansible_ssh_user=rashit_patel ansible_ssh_pass=3149 ansible_become_pass=3149
