--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,7 @@
 - name: Deploy Docker Container
   hosts: localhost
   become: true
+  gather_facts: no
   tasks:
     - name: Check if Docker is installed
       apt:
