--- a/deploy.yml
+++ b/deploy.yml
@@ -1,32 +1,18 @@
-- name: Deploy Docker Container
+---
+- name: Deploy Scientific Calculator Container
   hosts: localhost
-  become: true
+  become: yes
+  gather_facts: no
   tasks:
-    - name: Check if Docker is installed
-      apt:
-        name: docker.io
-        state: present
-      when: ansible_os_family == "Debian"
-
-    - name: Pull image from Docker Hub
-      community.docker.docker_image:
-        name: rakshit910/scientific-calculator
+    - name: Pull Docker image from Docker Hub
+      docker_image:
+        name: rakshit910/scientific_calculator
         tag: latest
         source: pull
 
-    - name: Replace old container (stop and remove)
-      community.docker.docker_container:
-        name: scientific-calculator
-        state: absent
-        force_kill: yes
-
-    - name: Run new container
-      community.docker.docker_container:
-        name: scientific-calculator
-        image: rakshit910/scientific-calculator:latest
+    - name: Run Docker container
+      docker_container:
+        name: scientific_calculator
+        image: rakshit910/scientific_calculator:latest
         state: started
         restart_policy: always
-        ports:
-          - "9090:8080"
-        interactive: yes
-        tty: yes
