--- a/deploy.yml
+++ b/deploy.yml
@@ -1,18 +1,32 @@
----
-- name: Deploy Scientific Calculator Container
+- name: Deploy Docker Container
   hosts: localhost
-  become: yes
-  gather_facts: no
+  become: true
   tasks:
-    - name: Pull Docker image from Docker Hub
-      docker_image:
+    - name: Check if Docker is installed
+      apt:
+        name: docker.io
+        state: present
+      when: ansible_os_family == "Debian"
+
+    - name: Pull image from Docker Hub
+      community.docker.docker_image:
         name: rakshit910/scientific-calculator
         tag: latest
         source: pull
 
-    - name: Run Docker container
-      docker_container:
+    - name: Replace old container (stop and remove)
+      community.docker.docker_container:
+        name: scientific-calculator
+        state: absent
+        force_kill: yes
+
+    - name: Run new container
+      community.docker.docker_container:
         name: scientific-calculator
         image: rakshit910/scientific-calculator:latest
         state: started
         restart_policy: always
+        ports:
+          - "9090:8080"
+        interactive: yes
+        tty: yes
