--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,2 @@
 [myhosts]
-localhost ansible_ssh_user=rashit-patel ansible_ssh_pass=3149 ansible_become=true ansible_become_pass=3149
+localhost ansible_ssh_user=rashit-patel ansible_ssh_pass=3149
